<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:layout_gravity="center"
            android:text="@string/sign_up_title"
            android:textColor="?android:textColorPrimary"
            android:textSize="23sp" />

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:src="@drawable/ic_we_connect_logo"/>

        <EditText
            android:id="@+id/user1"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textColorHint="@color/gray"
            android:hint="@string/enter_username_hint"
            android:drawableStart="@drawable/custom_user_icon"
            android:drawablePadding="10dp"
            android:background="@drawable/custom_input"
            android:padding="10dp"
            android:layout_marginTop="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textColorHint="@color/gray"
            android:hint="@string/enter_email_hint"
            android:drawableStart="@drawable/custom_email_icon"
            android:drawablePadding="10dp"
            android:background="@drawable/custom_input"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:singleLine="true"/>

        <EditText
            android:id="@+id/pass1"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textColorHint="@color/gray"
            android:hint="@string/enter_password_hint"
            android:drawableStart="@drawable/custom_lock_icon"
            android:drawablePadding="10dp"
            android:background="@drawable/custom_input"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:singleLine="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginRight="20dp"
            android:layout_gravity="right"
            android:textSize="15sp"
            android:textColor="?android:textColorPrimary"
            android:text="@string/have_account_label" />

        <Button
            android:id="@+id/sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:backgroundTint="@color/link_blue"
            android:text="@string/signup_btn_label" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="12dp"
                android:background="@color/gray" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="?android:attr/colorBackground"
                android:padding="2dp"
                android:text="@string/or_connect_with_label" />
        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/google_logo"
            android:text="@string/google_btn_label"
            android:textColor="@color/dark_gray"
            android:backgroundTint="@color/white"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="?android:attr/colorBackground"
            android:padding="2dp"
            android:text="@string/or_label"/>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/facebook_logo"
            android:text="@string/facebook_btn_label"
            android:textColor="@color/white"
            android:backgroundTint="#3B5998"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>